fix: fix text-align of main-desc.

--- a/src/sass/pages/_devops.scss
+++ b/src/sass/pages/_devops.scss
@@ -231,7 +231,7 @@ body.devops {
             margin: auto;
             max-width: none;
             line-height: 1.5;
-            text-align: center;
+            text-align: left;
           }
     }
 
